--- a/src/Css/Download.css
+++ b/src/Css/Download.css
@@ -3,7 +3,8 @@
     margin-top: 15px;
 }
 
-.down_head  > span{
-    margin-right: 20px;
+#a2{
+    margin-left: 10px;
     letter-spacing: 2px;
 }
+
