--- a/src/Css/musicPlayer.css
+++ b/src/Css/musicPlayer.css
@@ -1,6 +1,6 @@
 
 .outer{
-    height: 90vh;
+    height: 95vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -29,8 +29,9 @@
 
 .music_details > .song{
     margin: 15px 0px;
-    font-weight: 400;
+    font-weight: 300;
     color: #f5f6fa;
+    font-size: 20px;
 }
 
 .music_details > .artist{
@@ -39,6 +40,10 @@
     font-style: italic;
     color:#f5f6fa;
     animation: 2s slide  alternate infinite ease;
+}
+
+#a1{
+    margin-right: 10px;
 }
 
 @keyframes slide{
