--- a/src/Css/musicPlayer.css
+++ b/src/Css/musicPlayer.css
@@ -14,9 +14,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #2f3640;
+    /* background-color: #2f3640; */
     justify-content: space-around;
-    box-shadow: 0px 2px 4px #4cd137;
+    box-shadow: -3px 3px 4px #4cd137;
     border-radius: 10px;
 }
 
@@ -30,7 +30,7 @@
 .music_details > .song{
     margin: 15px 0px;
     font-weight: 300;
-    color: #f5f6fa;
+    /* color: #f5f6fa; */
     font-size: 20px;
 }
 
@@ -38,7 +38,7 @@
     margin: 10px 0px;
     font-weight: 300;
     font-style: italic;
-    color:#f5f6fa;
+    /* color:#f5f6fa; */
     animation: 2s slide  alternate infinite ease;
 }
 
@@ -76,13 +76,13 @@
 .music_controls > .play_outer{
     width: 50px;
     height: 50px;
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    /* color: white; */
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 48%;
-    box-shadow: 0px 2px 2px #4cd137;
+    box-shadow: 3px 2px 2px #4cd137;
 }
 
 .music_controls > .play_outer:hover{
@@ -103,9 +103,9 @@
         transform: rotate(360deg);
     }
 }
-.next,.prev{
+/* .next,.prev{
     color:#f5f6fa;
-}
+} */
 
 .progressbar{
     width: 100%;
@@ -127,7 +127,7 @@
 .progress_outer{
    width: 75%;
    height: 5px;
-   background-color: #f5f6fa;
+   /* background-color: #f5f6fa; */
    margin: 15px 0px;
    position: relative;
    display: flex;
@@ -154,9 +154,9 @@
    -webkit-appearance: none; */
 }
 
-.start,.end{
+/* .start,.end{
     color: #f5f6fa;
-}
+} */
 
 .icons{
     display: flex;
