--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -1,3 +1,13 @@
 .home{
     width: 100%;
 }
+
+#mymap{
+    width: 100%;
+    background-color: black;
+    /* text-align: center; */
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
