--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -11,3 +11,10 @@
     align-items: center;
     flex-direction: column;
 }
+
+.map_head{
+    padding: 10px;
+    font-weight: 300;
+    font-style: italic;
+    /* border: 1px solid white; */
+}
