--- a/src/Css/Download.css
+++ b/src/Css/Download.css
@@ -28,3 +28,9 @@
 
 
 /* .musicsearch */
+.download_msg{
+    text-align: center;
+    margin-top: 25px;
+    font-weight: 300;
+    font-style: italic;
+}
