--- a/src/Css/Background.css
+++ b/src/Css/Background.css
@@ -21,7 +21,7 @@
 }
 
 .greet_div{
-    position: absolute;
+    position: inherit;
     left: 0;
     top: 3%;
     width: 100%;
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
