--- a/src/Css/MusicCompo.css
+++ b/src/Css/MusicCompo.css
@@ -4,12 +4,13 @@
     display: flex;
     justify-content: center;
     padding-top: 15px;
+    height: 500px;
     /* margin: 1px 0px; */
 }
 
 .music_compo_inner{
     display: flex;
-    height: 400px;
+    height: 100%;
     justify-content: center;
     align-items: center;
     padding: 30px 0px;
