--- a/src/Css/Combo.css
+++ b/src/Css/Combo.css
@@ -13,6 +13,37 @@
     /* background-color: bisque; */
 }
 
+/* general style of scrollbar irrespective of the theme */
+.download_combo::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  .download_combo::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+
+/* for LIGHT THEME */
+
+/* width */
+   
+  /* Handle */
+  .light::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 10px;
+  }
+
+  /* for DARK theme */
+   
+  /* Handle */
+  .dark::-webkit-scrollbar-thumb {
+    background: dodgerblue; 
+    border-radius: 10px;
+  }
+  
+
+
 .music_combo{
     width: 75%;
 }
