--- a/src/Css/Background.css
+++ b/src/Css/Background.css
@@ -1,15 +1,6 @@
-.outer_back{
-    height: 90vh;
-    width: 100%;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    position: relative;
-}
-
 .banner{
- position: absolute;
- height: 100%;
+ position: relative;
+ height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
@@ -21,9 +12,9 @@
 }
 
 .greet_div{
-    position: inherit;
+    position: absolute;
     left: 0;
-    top: 3%;
+    top: 10%;
     width: 100%;
     height: 50px;
     background-color: black;
@@ -79,8 +70,10 @@
     background-color: black;
     color: white;
     outline: none;
-    border: 1px solid black;
+    border: 1px solid rgba(255,255,255,0.7);
+    border-radius: 5px;
     width: 200px;
+    transition: .5s ease-in-out;
 }
 
 .download:hover{
