--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -5,10 +5,11 @@
     background-color: black;
     justify-content: space-between;
     align-items: center;
-    padding: 0 100px;
+    padding: 0 75px;
     /* position: fixed; */
     z-index: 99;
-    border-bottom: 1px solid white;
+    /* border-bottom: 1px solid white; */
+    /* position: sticky; */
 }
 
 .nav_logo a{
