--- a/src/Css/MusicCompo.css
+++ b/src/Css/MusicCompo.css
@@ -13,8 +13,9 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    padding: 30px 0px;
+    padding: 50px 0px;
     width: 90%;
+    /* background-color: beige; */
     /* position: relative; */
     /* background-color: aqua; */
 }
@@ -83,18 +84,22 @@
     }
 } */
 
-@media(max-width: 375px){
+@media(max-width: 376px){
     .music_compo_outer{
         overflow-x: scroll;
     }
     .music_compo_inner{
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
+        width: 110%;
         /* padding: 50px; */
     }
+    .steps1{
+        margin-left: 40px;
+    }
     .steps2{
-        margin-right: 20px;
+        margin-right: 25px;
     }
 }
 
